# project-x

./: .gitignore  README.md  attacks.json  attacks_extended.json  attacks_v2.json  dashboard.py  evaluator.py  generate_report.py  hackathon_ICCSDFAI_2026 (1).docx  import_attacks.py  pyproject.toml  railway.toml  report_template.html  requirements.txt  runner.py  server.py  transformations.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: architecture-section.tsx  categories-section.tsx  datasets-section.tsx  fade-in.tsx  glsl-hills.tsx  hero-section.tsx  navbar.tsx  runner-section.tsx  section-tag.tsx  site-footer.tsx  typing-text.tsx
frontend/src/config/: constants.ts
frontend/src/context/: lang-context.tsx
frontend/src/hooks/: use-in-view.ts  use-scroll-progress.ts
frontend/src/lib/: api.ts  i18n.ts
