[project]
name = "aitu-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "streamlit>=1.38",
    "plotly>=5.24",
    "pandas>=2.2",
    "jinja2>=3.1",
    "tqdm>=4.66",
    "rich>=13.7",
]
